--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,14 +1,11 @@
 main:
 
-  - title: Continual Learning for Abdominal Multi-Organ and Tumor Segmentation
-    authors: Yixiao Zhang, Xinyi Li, Huimiao Chen, Alan Yuille, <strong>Yaoyao Liu*</strong>, Zongwei Zhou* (*Corresponding authors)
-    conference_short: MICCAI
-    conference: International Conference on Medical Image Computing and Computer-Assisted Intervention <strong>(MICCAI)</strong>, 2023.
-    pdf: https://arxiv.org/pdf/2306.00988.pdf
-    code: https://github.com/MrGiovanni/ContinualLearning
-    bibtex: https://bib.yliu.me/MICCAI23.txt
-    image: ./assets/img/teaser_example_2.png
-    notes: Early Accept
+  - title: Enhanced Neural Video Compression for Cloud Gaming Videos with Aligned Frame Generation
+    authors: Yifan Wang, <strong>Fei Yang</strong>, Luka Murn, Juil Sock, Marc Gorriz Blanch, Shuai Wan, Wei Zhang, Fuzheng Yang, Luis Herranz
+    journal: Expert Systems with Applications.
+    pdf: https://www.sciencedirect.com/science/article/pii/S0957417424024023
+    code: 
+    image: ./assets/img/yifan25.png
 
   - title: "Mnemonics Training: Multi-Class Incremental Learning without Forgetting"
     authors: <strong>Yaoyao Liu</strong>, Yuting Su, An-An Liu, Bernt Schiele, Qianru Sun
